[package]
name = "rando-qc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rando"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proj = "0.31"
colored = "3.0"
anyhow = "1.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.28"
qrcode = "0.13"
rand = "0.8"
